--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <p>
                 <br>
                 Estudante de Ciência da Computação, atualmente fazendo um projeto de extensão Unifap Digital, voltado para desenvolvimento web e mobile. 
-                A procura de estágio na área de desenvolvimento web, tenho conhecimentos intermediarios em <span>JavaScript, NodeJs, HTML e CSS</span>, e básicos em <span>react</span>.
-                Possuo tambem conhecimento intermediario em <span>Python</span>, e básico em <span>Django</span>.<br>
+                A procura de estágio na área de desenvolvimento web, tenho conhecimentos em linguaguens <span>JavaScript, NodeJs, HTML e CSS, TypeScript</span>, e frameworks <span>react, express</span>.
+                Possuo tambem conhecimento básico de SQL e C.
                 <br>
                 Gosto muito de aprender novas tecnologias, e sempre estou fazendo projetos para colocar meus conhecimentos em pratica, e meus principais hobbies
                 são jogar jogos fps, campanha ou rpg, ver animes e séries. 
