--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <p>Oii! meu nome é Heloysa Gama, seja bem-vindo(a)!</p>
               <p>
                 <br>
-                Estudante de Ciência da Computação, atualmente fazendo um projeto de extensão Unifap Digital, voltado para desenvolvimento web e mobile. 
+                Estudante de Ciência da Computação, atualmente dando aula de Desenvolvimento Web no projeto CRC, na Universidade Federal do Amapá. 
                 A procura de estágio na área de desenvolvimento web, tenho conhecimentos em linguaguens <span>JavaScript, NodeJs, HTML e CSS, TypeScript</span>, e frameworks <span>react, express</span>.
                 Possuo tambem conhecimento básico de SQL e C.
                 <br>
