--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
               <p>Oii! meu nome é Heloysa Gama, seja bem-vindo(a)!</p>
               <p>
                 <br>
-                Estudante de Ciência da Computação, atualmente dando aula de Desenvolvimento Web no projeto CRC, na Universidade Federal do Amapá. 
-                A procura de estágio na área de desenvolvimento web, tenho conhecimentos em linguaguens <span>JavaScript, NodeJs, HTML e CSS, TypeScript</span>, e frameworks <span>react, express</span>.
-                Possuo tambem conhecimento básico de SQL e C.
-                <br>
-                Gosto muito de aprender novas tecnologias, e sempre estou fazendo projetos para colocar meus conhecimentos em pratica, e meus principais hobbies
-                são jogar jogos fps, campanha ou rpg, ver animes e séries. 
+            Estudande de Ciência da Computação, sou desenvolvedora com habilidades tanto no frontend quanto no backend. 
+                Tenho conhecimentos nas linguaguens de programação <span>Javascript && Python </span>, tambem ultilizo das frameworks <span>React, Django, Express, Fastify, NextJs</span>, 
+                faço uso principalmente das ORM'S Prisma e Sequelize para facilitar a comunicação com o <span>Banco de Dados, como SQL e MongoDB.</span>
+              <br>
+                Gosto de muito de aprender novas tecnologias, e sempre estou fazendo projetos para colocar meus 
+                conhecimentos em prática.
               </p>
             </div>
           </div>
