--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
               <p>Oii! meu nome é Heloysa Gama, seja bem-vindo(a)!</p>
               <p>
                 <br>
-            Estudande de Ciência da Computação, sou desenvolvedora com habilidades tanto no frontend quanto no backend. 
-                Tenho conhecimentos nas linguaguens de programação <span>Javascript && Python </span>, tambem ultilizo das frameworks <span>React, Django, Express, Fastify, NextJs</span>, 
-                faço uso principalmente das ORM'S Prisma e Sequelize para facilitar a comunicação com o <span>Banco de Dados, como SQL e MongoDB.</span>
+            Estudande de Ciência da Computação, sou desenvolvedora com habilidades tanto no frontend quanto no backend. Tenho conhecimentos nas linguaguens de programação <span>Javascript && Python </span>, tambem ultilizo das frameworks <span>React, Django, Express, Fastify, NextJs</span>, faço uso principalmente das ORM'S Prisma e Sequelize para facilitar a comunicação com o <span>Banco de Dados, como SQL e MongoDB.</span>
               <br>
-                Gosto de muito de aprender novas tecnologias, e sempre estou fazendo projetos para colocar meus 
-                conhecimentos em prática.
+                Gosto de muito de aprender novas tecnologias, e sempre estou fazendo projetos para colocar meus conhecimentos em prática.
               </p>
             </div>
           </div>
